template.yaml
Description: Example of a RDS database cluster running in a VPC and a custom deploy process to create tables and users
Transform: "AWS::Serverless-2016-10-31"

Globals:
  Function:
    Runtime: go1.x

Parameters:
  DatabaseName:
    Type: String
    Default: testdatabase
  DatabaseTableName:
    Type: String
    Default: transactions
  RDSDatabaseUserName:
    Type: String
    Default: lambda_user
  RDSDatabaseUserPassword:
    NoEcho: true
    Type: String
    Default: testing1
  Version:
    Type: String
    Default: v1

Resources:
##
#  VPC Related Resources
##
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
      - Key: name
        Value:  !Join ['', [!Ref DatabaseName, "-VPC" ]]   
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    DependsOn: VPC
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  # Public Subnets
  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.1.10.0/24
      AvailabilityZone: !Select [ 0, !GetAZs ]
      Tags:
      - Key: Names
        Value: !Sub ${DatabaseName}-PublicA
  PublicSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 10.1.20.0/24
      AvailabilityZone: !Select [ 1, !GetAZs ]
      Tags:
      - Key: Names
        Value: !Sub ${DatabaseName}-PublicA

  # Some route tables
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  # Attach the public subnets to public route tables,
  # and attach the private subnets to private route tables:
  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable

  PublicSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetB
      RouteTableId: !Ref PublicRouteTable

##
#  Security Groups Section
##

  # Security Groups
  LambdaSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId: !Ref VPC
      # SecurityGroupIngress:
      # Let's try without this and see if I can still route to the lambda function in the GW
      # - IpProtocol: tcp
      #   FromPort: 80
      #   ToPort: 80
      #   CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: '-1'
        FromPort: -1
        ToPort: -1
        CidrIp: 0.0.0.0/0

  DatabaseSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    DependsOn:
      - PublicSubnetA
      - PublicSubnetB
    Properties:
      GroupDescription: Allow http to client host
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        CidrIp: 69.251.135.83/32
      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        CidrIp: 108.56.183.61/32
      - IpProtocol: tcp
        FromPort: 3306
        ToPort: 3306
        SourceSecurityGroupId: !GetAtt LambdaSecurityGroup.GroupId
      SecurityGroupEgress:
      - IpProtocol: "-1"
        FromPort: -1
        ToPort: -1
        CidrIp: 0.0.0.0/0

  # Subnet Group
  PublicSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties: 
      DBSubnetGroupName: publicsubnetgroup
      DBSubnetGroupDescription: Public Subnet Groups
      SubnetIds:
        - !Ref PublicSubnetA
        - !Ref PublicSubnetB

  # Database Cluster (Currently a serverless Aurora SQL DB)
  # I'm not setting Redundancy for this as it's just a test, and EC2 is expensive
  RDSDatabase:
    Type: AWS::RDS::DBCluster
    Properties:
      DBClusterIdentifier: !Ref DatabaseName
      Engine: aurora
      EnableIAMDatabaseAuthentication: true
      MasterUsername: admin
      MasterUserPassword: !Ref RDSDatabaseUserPassword
      DBSubnetGroupName: !Ref PublicSubnetGroup
      VpcSecurityGroupIds:
        - !GetAtt DatabaseSecurityGroup.GroupId
  RDSInstance1:
    Type: AWS::RDS::DBInstance
    DependsOn:
      - PublicSubnetA
    Properties:
      DBClusterIdentifier: !Ref RDSDatabase
      # Customize this to the size machine you want
      DBInstanceClass: db.r4.large
      Engine: aurora
      PubliclyAccessible: true
      DBSubnetGroupName: !Ref PublicSubnetGroup

##
# IAM Role to provide Access to RDS for the Lambda functions
##
  LambdaRDSExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
        - Effect: Allow
          Principal:
            Service:
            - lambda.amazonaws.com
          Action:
          - sts:AssumeRole
      Path: "/"
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
      Policies:
      - PolicyName: RDSTokenAccessPolicy
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
            - Effect: Allow
              Action:
                - rds-db:connect
              Resource: !Sub "arn:aws:rds-db:${AWS::Region}:${AWS::AccountId}:dbuser:cluster-R2XJWZ3WIRVJET2525ZXTTFHOA/${RDSDatabaseUserName}"

##
# Database initialization Custom Resource Code
##

  # API Lambda
  ServiceApi:
    Type: AWS::Serverless::Api
    Properties:
      Name: ServiceApi
      StageName: !Ref Version

  DeployLambdaFunction:
    Type: AWS::Serverless::Function
    Description: Boilerplate function to create a database, a user, and a table for use in the subsequent service calls
    Properties:
      Handler: ./dist/deploy
      Timeout: 30
      Policies:
        - AWSLambdaVPCAccessExecutionRole
      Environment:
        Variables:
          # We create this user in this function so we can connect in the future using a role
          DB_SERVICE_USER: !Ref RDSDatabaseUserName
          DB_ADMIN_USER: admin
          DB_PASSWORD: !Ref RDSDatabaseUserPassword
          DB_HOST: !GetAtt RDSDatabase.Endpoint.Address
          DB_PORT: !GetAtt RDSDatabase.Endpoint.Port
          DB_NAME: !Ref DatabaseName
          DB_TABLE_NAME: !Ref DatabaseTableName
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt LambdaSecurityGroup.GroupId
        SubnetIds:
          - !Ref PublicSubnetA
          - !Ref PublicSubnetB
      Events:
        CreateUser:
          Type: Api
          Properties:
            Path: /deploy
            RestApiId: !Ref ServiceApi
            Method: Get

  LambdaFunction:
    Type: AWS::Serverless::Function
    Description: Function to get the data out of the database
    Properties:
      Handler: ./dist/main
      Timeout: 30
      Role: !GetAtt LambdaRDSExecutionRole.Arn
      Environment:
        Variables:
          DB_SERVICE_USER: !Ref RDSDatabaseUserName
          DB_HOST: !GetAtt RDSDatabase.ReadEndpoint.Address
          DB_PORT: !GetAtt RDSDatabase.Endpoint.Port
          DB_NAME: !Ref DatabaseName
          DB_TABLE_NAME: !Ref DatabaseTableName
          ROLE_ARN: !GetAtt LambdaRDSExecutionRole.Arn
      VpcConfig:
        SecurityGroupIds:
          - !GetAtt LambdaSecurityGroup.GroupId
        SubnetIds:
          - !Ref PublicSubnetA
          - !Ref PublicSubnetB
      Events:
        CreateUser:
          Type: Api
          Properties:
            Path: /transactions
            RestApiId: !Ref ServiceApi
            Method: Get

Outputs:
  VPCID:
    Description: The Logical ID for the VPC
    Value: !Ref VPC
    Export:
      Name: VPCID
  LambdaSecurityGroupId:
    Description: The Security Group to put on the lambdas that need DB Access
    Value: !GetAtt LambdaSecurityGroup.GroupId
    Export:
      Name: LambdaSecurityGroupId
  RDSDatabaseReadHost:
    Description: Database Host URL
    Value: !GetAtt RDSDatabase.ReadEndpoint.Address
    Export:
      Name: RDSDatabaseReadHost
  ApiUrl:
    Description: The API URL
    Value: !Sub "https://${ServiceApi}.execute-api.${AWS::Region}.amazonaws.com/${Version}"
